Добавила заголовочный файл Shooting.h

--- a/popitka/popitka/popitka.vcxproj
+++ b/popitka/popitka/popitka.vcxproj
@@ -73,6 +73,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Globals.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Shooting.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
