Создала Player.h - передаю в дальнейшую разработку

--- a/popitka/popitka/popitka.vcxproj
+++ b/popitka/popitka/popitka.vcxproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Shooting.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
