--- a/popitka/popitka/popitka.vcxproj.filters
+++ b/popitka/popitka/popitka.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClInclude Include="Shooting.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
