добавила файл реализации Shooting.cpp, описала стрелка, пули и движение пуль.

--- a/popitka/popitka/popitka.vcxproj
+++ b/popitka/popitka/popitka.vcxproj
@@ -73,10 +73,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Enemies.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Shooting.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Enemies.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Shooting.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
